--- a/BIT/Pages/Customer/CustomerEditor.razor
+++ b/BIT/Pages/Customer/CustomerEditor.razor
@@ -17,7 +17,7 @@
     <div class="mb-3">
         <label for="nameInput" class="form-label">Name</label>
         <input type="text" class="form-control" id="nameInput" @bind="Customer.Name">
-    </div
+    </div>
     <div class="mb-3">
         <label for="cityInput" class="form-label">Ort</label>
         <input type="text" class="form-control" id="cityInput" @bind="Customer.City">
