--- a/BIT/Shared/NavMenu.razor
+++ b/BIT/Shared/NavMenu.razor
@@ -29,6 +29,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Kundenübersicht
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="contact-person-overview">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> KontaktPerson
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
